# qe-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
huggingface_space/: README.md  app.py  requirements.txt
huggingface_space/qe_mcp/: __init__.py  config.py  server.py
huggingface_space/qe_mcp/core/: __init__.py  input_generator.py  runner.py
huggingface_space/qe_mcp/prompts/: __init__.py  templates.py
huggingface_space/qe_mcp/resources/: __init__.py  documentation.py  llm_context.py  plotting.py
huggingface_space/qe_mcp/tools/: calculations.py  data_access.py  postprocessing.py  utilities.py  workflows.py
polaris-qespresso/: globus_runner.py  polaris_worker.py  qe_polaris_config  runner_patch.py
scripts/: check_mcp_schema_budget.py  download_pseudos.py  stage_pseudos.py  test_e2e.py
src/qe_mcp/: __init__.py  config.py  server.py
src/qe_mcp/cli/: watch.py
src/qe_mcp/core/: __init__.py  globus_runner.py  job_registry.py  parser.py  pseudopotentials.py  runner.py  structures.py
src/qe_mcp/prompts/: __init__.py  band_structure.md  compare_structures.md  convergence_test.md  dos_calculation.md  geometry_optimization.md  magnetic_calculation.md  surface_calculation.md  troubleshoot.md
src/qe_mcp/resources/: __init__.py
src/qe_mcp/skills/: __init__.py  band_structure.md  compare.md  convergence.md  dos.md  magnetic.md  plot.md  relax.md  report.md  scf.md  status.md  troubleshoot.md
src/qe_mcp/tools/: __init__.py  calculations.py  data_access.py  job_status.py  postprocessing.py  utilities.py  workflows.py
test_calc/: si_scf.in
(+13 files in other folders)
