[project]
name = "qe-mcp"
version = "0.1.0"
description = "MCP server for Quantum ESPRESSO DFT calculations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "ase>=3.22.0",
    "numpy>=1.24.0",
    "spglib>=2.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
hpc = ["globus-compute-sdk>=2.3.0"]

[project.scripts]
qe-mcp = "qe_mcp.server:main"
qe-watch = "qe_mcp.cli.watch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qe_mcp"]
